# sunmonlok

./: .env.example  .gitignore  LICENSE  Makefile  README.md  add_user_to_input_grp.sh  client.py  config.json  pyproject.toml  requirements-client.txt  requirements-dev.txt  requirements.txt  setup.sh  sunmonlok.py  test_client.py  test_mapping.py  test_monitors.py  test_mouse_provider.py
mlock/: config.py  executor.py  hyprland_mouse.py  input_reader.py  mapper.py  protocol.py  server.py  sunshine_monitor.py
sunshine_mmlock/: __main__.py  hyprland_monitor.py  listener.py  sunshine_monitor.py
